# mzapy

./: .gitignore  .readthedocs.yaml  README.md  license.txt  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: requirements.txt
docs/source/: MZA.rst  calibration.rst  conf.py  dda.rst  index.rst  isotopes.rst  peaks.rst  view.rst
docs/source/guides/: installation.rst  technote_demo.ipynb
docs/source/project_info/: citing.rst  contributing.rst  disclaimer.rst  license.rst
mzapy/: __init__.py  _config.py  _util.py  calibration.py  dda.py  isotopes.py  peaks.py  view.py
mzapy/test/: MZA.py  __init__.py  __main__.py  calibration.py  isotopes.py  peaks.py
