[metadata]
name = mzapy
version = attr: mzapy.__version__
author = Dylan Ross
author_email = dylan.ross@pnnl.gov
description = A Python package that provides an interface to raw MS data in the MZA format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PNNL-m-q/mzapy
project_urls =
    Bug Tracker = https://github.com/PNNL-m-q/mzapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = mzapy
install_requires =
    h5py
    hdf5plugin
    pandas
    numpy
    scipy
    matplotlib
